# ai-search-engine

./: README.md  app.py  config.py  pyproject.toml
services/: gigachat.py  history.py  search.py  tavily_service.py
static/css/: custom.css
static/js/: main.js
templates/: base.html  index.html
