[project]
name = "repl-nix-aipoiskovik"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "duckduckgo-search>=6.3.5",
    "sqlalchemy>=2.0.36",
    "certifi",
    "gigachat>=0.1.36",
    "tavily-python>=0.5.0",
]
